src/main/com/greenpineyu/fel/parser/FelParser.java
// $ANTLR 3.4 e:\\workspace\\Fel\\Fel.g 2013-05-30 21:53:58

package com.greenpineyu.fel.parser;
//import com.greenpineyu.fel.exception.ParseException;
import java.util.HashMap;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.IntStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.MismatchedTokenException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTree;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class FelParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Additive", "And", "BooleanLiteral", "Bracket", "COMMENT", "CharacterLiteral", "Colon", "DecimalLiteral", "Dot", "Equals", "EscapeSequence", "Exponent", "FloatTypeSuffix", "FloatingPointLiteral", "HexDigit", "HexLiteral", "Identifier", "IntegerTypeSuffix", "JavaIDDigit", "LINE_COMMENT", "Letter", "Multiplicative", "Not", "OctalEscape", "OctalLiteral", "Or", "Ques", "Relational", "StringLiteral", "UnicodeEscape", "WS", "'('", "')'", "','", "']'"
    };

    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int Additive=4;
    public static final int And=5;
    public static final int BooleanLiteral=6;
    public static final int Bracket=7;
    public static final int COMMENT=8;
    public static final int CharacterLiteral=9;
    public static final int Colon=10;
    public static final int DecimalLiteral=11;
    public static final int Dot=12;
    public static final int Equals=13;
    public static final int EscapeSequence=14;
    public static final int Exponent=15;
    public static final int FloatTypeSuffix=16;
    public static final int FloatingPointLiteral=17;
    public static final int HexDigit=18;
    public static final int HexLiteral=19;
    public static final int Identifier=20;
    public static final int IntegerTypeSuffix=21;
    public static final int JavaIDDigit=22;
    public static final int LINE_COMMENT=23;
    public static final int Letter=24;
    public static final int Multiplicative=25;
    public static final int Not=26;
    public static final int OctalEscape=27;
    public static final int OctalLiteral=28;
    public static final int Or=29;
    public static final int Ques=30;
    public static final int Relational=31;
    public static final int StringLiteral=32;
    public static final int UnicodeEscape=33;
    public static final int WS=34;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public FelParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public FelParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[46+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return FelParser.tokenNames; }

	public String getGrammarFileName() {
		return "e:\\workspace\\Fel\\Fel.g";
	}


    protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
    	throws RecognitionException
    {
    	throw new MismatchedTokenException(ttype, input);
    }
    //public void emitErrorMessage(String msg) {
    //		System.err.println(msg);
    	// do not display error ,instead of ErrorHndler
    //}



    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
	// e:\\workspace\\Fel\\Fel.g:46:1: program : conditionalExpression EOF !;
    public final FelParser.program_return program() throws RecognitionException {
        FelParser.program_return retval = new FelParser.program_return();
        retval.start = input.LT(1);

        int program_StartIndex = input.index();

        CommonTree root_0 = null;

        Token EOF2=null;
        FelParser.conditionalExpression_return conditionalExpression1 =null;


        CommonTree EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:46:9: ( conditionalExpression EOF !)
			// e:\\workspace\\Fel\\Fel.g:46:11: conditionalExpression EOF !
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_conditionalExpression_in_program87);
            conditionalExpression1=conditionalExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program89); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, program_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "program"


    public static class parExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parExpression"
	// e:\\workspace\\Fel\\Fel.g:49:1: parExpression : '(' ! expressionList ')'
	// !;
    public final FelParser.parExpression_return parExpression() throws RecognitionException {
        FelParser.parExpression_return retval = new FelParser.parExpression_return();
        retval.start = input.LT(1);

        int parExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token char_literal3=null;
        Token char_literal5=null;
        FelParser.expressionList_return expressionList4 =null;


        CommonTree char_literal3_tree=null;
        CommonTree char_literal5_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:50:5: ( '(' ! expressionList ')' !)
			// e:\\workspace\\Fel\\Fel.g:50:9: '(' ! expressionList ')' !
            {
            root_0 = (CommonTree)adaptor.nil();


				char_literal3 = (Token) match(input, 35, FOLLOW_35_in_parExpression105);
				if (state.failed)
					return retval;

            pushFollow(FOLLOW_expressionList_in_parExpression108);
            expressionList4=expressionList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expressionList4.getTree());

				char_literal5 = (Token) match(input, 36, FOLLOW_36_in_parExpression110);
				if (state.failed)
					return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, parExpression_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "parExpression"


    public static class expressionList_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expressionList"
	// e:\\workspace\\Fel\\Fel.g:53:1: expressionList : ( conditionalExpression
	// )? ( ',' ! ( conditionalExpression )? )* ;
    public final FelParser.expressionList_return expressionList() throws RecognitionException {
        FelParser.expressionList_return retval = new FelParser.expressionList_return();
        retval.start = input.LT(1);

        int expressionList_StartIndex = input.index();

        CommonTree root_0 = null;

        Token char_literal7=null;
        FelParser.conditionalExpression_return conditionalExpression6 =null;

        FelParser.conditionalExpression_return conditionalExpression8 =null;


        CommonTree char_literal7_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:54:5: ( ( conditionalExpression )? (
			// ',' ! ( conditionalExpression )? )* )
			// e:\\workspace\\Fel\\Fel.g:54:9: ( conditionalExpression )? ( ','
			// ! ( conditionalExpression )? )*
            {
            root_0 = (CommonTree)adaptor.nil();


				// e:\\workspace\\Fel\\Fel.g:54:9: ( conditionalExpression )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==Additive||LA1_0==BooleanLiteral||LA1_0==CharacterLiteral||LA1_0==DecimalLiteral||LA1_0==FloatingPointLiteral||(LA1_0 >= HexLiteral && LA1_0 <= Identifier)||LA1_0==Not||LA1_0==OctalLiteral||LA1_0==StringLiteral||LA1_0==35) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
				// e:\\workspace\\Fel\\Fel.g:54:9: conditionalExpression
                    {
					pushFollow(FOLLOW_conditionalExpression_in_expressionList130);
                    conditionalExpression6=conditionalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression6.getTree());

                    }
                    break;

            }


				// e:\\workspace\\Fel\\Fel.g:55:4: ( ',' ! (
				// conditionalExpression )? )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==37) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
					// e:\\workspace\\Fel\\Fel.g:55:5: ',' ! (
					// conditionalExpression )?
            	    {
						char_literal7 = (Token) match(input, 37, FOLLOW_37_in_expressionList137);
						if (state.failed)
							return retval;

						// e:\\workspace\\Fel\\Fel.g:55:10: (
						// conditionalExpression )?
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==Additive||LA2_0==BooleanLiteral||LA2_0==CharacterLiteral||LA2_0==DecimalLiteral||LA2_0==FloatingPointLiteral||(LA2_0 >= HexLiteral && LA2_0 <= Identifier)||LA2_0==Not||LA2_0==OctalLiteral||LA2_0==StringLiteral||LA2_0==35) ) {
            	        alt2=1;
            	    }
            	    switch (alt2) {
            	        case 1 :
						// e:\\workspace\\Fel\\Fel.g:55:10:
						// conditionalExpression
            	            {
							pushFollow(FOLLOW_conditionalExpression_in_expressionList140);
            	            conditionalExpression8=conditionalExpression();

            	            state._fsp--;
            	            if (state.failed) return retval;
            	            if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression8.getTree());

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, expressionList_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "expressionList"


    public static class conditionalExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditionalExpression"
	// e:\\workspace\\Fel\\Fel.g:57:1: conditionalExpression :
	// conditionalOrExpression ( Ques ^ conditionalExpression Colon !
	// conditionalExpression )? ;
    public final FelParser.conditionalExpression_return conditionalExpression() throws RecognitionException {
        FelParser.conditionalExpression_return retval = new FelParser.conditionalExpression_return();
        retval.start = input.LT(1);

        int conditionalExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token Ques10=null;
        Token Colon12=null;
        FelParser.conditionalOrExpression_return conditionalOrExpression9 =null;

        FelParser.conditionalExpression_return conditionalExpression11 =null;

        FelParser.conditionalExpression_return conditionalExpression13 =null;


        CommonTree Ques10_tree=null;
        CommonTree Colon12_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:58:5: ( conditionalOrExpression ( Ques
			// ^ conditionalExpression Colon ! conditionalExpression )? )
			// e:\\workspace\\Fel\\Fel.g:58:9: conditionalOrExpression ( Ques ^
			// conditionalExpression Colon ! conditionalExpression )?
            {
            root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_conditionalOrExpression_in_conditionalExpression171);
            conditionalOrExpression9=conditionalOrExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalOrExpression9.getTree());

				// e:\\workspace\\Fel\\Fel.g:58:33: ( Ques ^
				// conditionalExpression Colon ! conditionalExpression )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Ques) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
				// e:\\workspace\\Fel\\Fel.g:58:35: Ques ^ conditionalExpression
				// Colon ! conditionalExpression
                    {
					Ques10 = (Token) match(input, Ques, FOLLOW_Ques_in_conditionalExpression175);
					if (state.failed)
						return retval;
                    if ( state.backtracking==0 ) {
                    Ques10_tree = 
                    (CommonTree)adaptor.create(Ques10)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(Ques10_tree, root_0);
                    }

					pushFollow(FOLLOW_conditionalExpression_in_conditionalExpression178);
                    conditionalExpression11=conditionalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression11.getTree());

					Colon12 = (Token) match(input, Colon, FOLLOW_Colon_in_conditionalExpression180);
					if (state.failed)
						return retval;

                    pushFollow(FOLLOW_conditionalExpression_in_conditionalExpression183);
                    conditionalExpression13=conditionalExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalExpression13.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, conditionalExpression_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "conditionalExpression"


    public static class conditionalOrExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditionalOrExpression"
	// e:\\workspace\\Fel\\Fel.g:60:1: conditionalOrExpression :
	// conditionalAndExpression ( Or ^ conditionalAndExpression )* ;
    public final FelParser.conditionalOrExpression_return conditionalOrExpression() throws RecognitionException {
        FelParser.conditionalOrExpression_return retval = new FelParser.conditionalOrExpression_return();
        retval.start = input.LT(1);

        int conditionalOrExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token Or15=null;
        FelParser.conditionalAndExpression_return conditionalAndExpression14 =null;

        FelParser.conditionalAndExpression_return conditionalAndExpression16 =null;


        CommonTree Or15_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:61:2: ( conditionalAndExpression ( Or ^
			// conditionalAndExpression )* )
			// e:\\workspace\\Fel\\Fel.g:61:4: conditionalAndExpression ( Or ^
			// conditionalAndExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_conditionalAndExpression_in_conditionalOrExpression199);
            conditionalAndExpression14=conditionalAndExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalAndExpression14.getTree());

				// e:\\workspace\\Fel\\Fel.g:61:29: ( Or ^
				// conditionalAndExpression )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==Or) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
					// e:\\workspace\\Fel\\Fel.g:61:30: Or ^
					// conditionalAndExpression
            	    {
						Or15 = (Token) match(input, Or, FOLLOW_Or_in_conditionalOrExpression202);
						if (state.failed)
							return retval;
            	    if ( state.backtracking==0 ) {
            	    Or15_tree = 
            	    (CommonTree)adaptor.create(Or15)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(Or15_tree, root_0);
            	    }

						pushFollow(FOLLOW_conditionalAndExpression_in_conditionalOrExpression205);
            	    conditionalAndExpression16=conditionalAndExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, conditionalAndExpression16.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, conditionalOrExpression_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "conditionalOrExpression"


    public static class conditionalAndExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditionalAndExpression"
	// e:\\workspace\\Fel\\Fel.g:64:1: conditionalAndExpression :
	// equalityExpression ( And ^ equalityExpression )* ;
    public final FelParser.conditionalAndExpression_return conditionalAndExpression() throws RecognitionException {
        FelParser.conditionalAndExpression_return retval = new FelParser.conditionalAndExpression_return();
        retval.start = input.LT(1);

        int conditionalAndExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token And18=null;
        FelParser.equalityExpression_return equalityExpression17 =null;

        FelParser.equalityExpression_return equalityExpression19 =null;


        CommonTree And18_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:65:2: ( equalityExpression ( And ^
			// equalityExpression )* )
			// e:\\workspace\\Fel\\Fel.g:65:4: equalityExpression ( And ^
			// equalityExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_equalityExpression_in_conditionalAndExpression219);
            equalityExpression17=equalityExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, equalityExpression17.getTree());

				// e:\\workspace\\Fel\\Fel.g:65:23: ( And ^ equalityExpression
				// )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==And) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
					// e:\\workspace\\Fel\\Fel.g:65:24: And ^ equalityExpression
            	    {
						And18 = (Token) match(input, And, FOLLOW_And_in_conditionalAndExpression222);
						if (state.failed)
							return retval;
            	    if ( state.backtracking==0 ) {
            	    And18_tree = 
            	    (CommonTree)adaptor.create(And18)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(And18_tree, root_0);
            	    }

						pushFollow(FOLLOW_equalityExpression_in_conditionalAndExpression225);
            	    equalityExpression19=equalityExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, equalityExpression19.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, conditionalAndExpression_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "conditionalAndExpression"


    public static class equalityExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "equalityExpression"
	// e:\\workspace\\Fel\\Fel.g:68:1: equalityExpression : relationalExpression
	// ( Equals ^ relationalExpression )* ;
    public final FelParser.equalityExpression_return equalityExpression() throws RecognitionException {
        FelParser.equalityExpression_return retval = new FelParser.equalityExpression_return();
        retval.start = input.LT(1);

        int equalityExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token Equals21=null;
        FelParser.relationalExpression_return relationalExpression20 =null;

        FelParser.relationalExpression_return relationalExpression22 =null;


        CommonTree Equals21_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:69:5: ( relationalExpression ( Equals ^
			// relationalExpression )* )
			// e:\\workspace\\Fel\\Fel.g:69:9: relationalExpression ( Equals ^
			// relationalExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_relationalExpression_in_equalityExpression243);
            relationalExpression20=relationalExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, relationalExpression20.getTree());

				// e:\\workspace\\Fel\\Fel.g:69:30: ( Equals ^
				// relationalExpression )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==Equals) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
					// e:\\workspace\\Fel\\Fel.g:69:32: Equals ^
					// relationalExpression
            	    {
						Equals21 = (Token) match(input, Equals, FOLLOW_Equals_in_equalityExpression247);
						if (state.failed)
							return retval;
            	    if ( state.backtracking==0 ) {
            	    Equals21_tree = 
            	    (CommonTree)adaptor.create(Equals21)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(Equals21_tree, root_0);
            	    }

						pushFollow(FOLLOW_relationalExpression_in_equalityExpression250);
            	    relationalExpression22=relationalExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, relationalExpression22.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

        catch (RecognitionException e) {
        reportError(e); 
        throw e;
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, equalityExpression_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "equalityExpression"


    public static class relationalExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "relationalExpression"
	// e:\\workspace\\Fel\\Fel.g:72:1: relationalExpression : additiveExpression
	// ( Relational ^ additiveExpression )* ;
    public final FelParser.relationalExpression_return relationalExpression() throws RecognitionException {
        FelParser.relationalExpression_return retval = new FelParser.relationalExpression_return();
        retval.start = input.LT(1);

        int relationalExpression_StartIndex = input.index();

        CommonTree root_0 = null;

        Token Relational24=null;
        FelParser.additiveExpression_return additiveExpression23 =null;

        FelParser.additiveExpression_return additiveExpression25 =null;


        CommonTree Relational24_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return retval; }

			// e:\\workspace\\Fel\\Fel.g:73:5: ( additiveExpression ( Relational
			// ^ additiveExpression )* )
			// e:\\workspace\\Fel\\Fel.g:73:9: additiveExpression ( Relational ^
			// additiveExpression )*
            {
            root_0 = (CommonTree)adaptor.nil();


				pushFollow(FOLLOW_additiveExpression_in_relationalExpression272);
            additiveExpression23=additiveExpression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, additiveExpression23.getTree());
